// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must create instances 1`] = `"string"`;

exports[`must merge data 1`] = `
{
  "foo": "bar",
  "uri": "zombo.com",
}
`;

exports[`must merge data 2`] = `
{
  "foo": "bar",
  "uri": "homestarrunner.com",
}
`;

exports[`must retrieve an instance given a key 1`] = `"LINK"`;

exports[`must retrieve an instance given a key 2`] = `"MUTABLE"`;

exports[`must retrieve an instance given a key 3`] = `
{
  "uri": "zombo.com",
}
`;
